# Phemia

./: .gitignore  CMakeLists.txt  Phemia  lexer.cpp  main.cpp  parser.cpp  parser.hpp  readme.md  test.sh
lexical/: lexer.l
llvm/: codeGen.hpp  coreFunc.hpp  node.h
semantic/: EBNF.md  EBNF_fix.md  parser.y
test/: 1.in  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  matrix-multiplication.txt  quicksort.txt  test1.txt
test/Course/: ans.txt
test/MatrixMul/: ans.txt
test/QuickSort/: ans.txt
util/: util.hpp
